--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ img {
 /*==================== END OF HEADER ====================*/
 
 /*==================== HERO ====================*/
-.hero-section {
+.hero {
   background-color: var(--footer-bg-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -212,7 +212,7 @@ img {
   text-align: center;
 }
 
-.hero-title {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.364;
