--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,20 @@ img {
   transition: filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /*==================== HEADER ====================*/
 
 .header {
@@ -235,34 +249,24 @@ img {
 /*==================== END OF HERO ====================*/
 
 /*==================== FEATURES ====================*/
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 .features {
   padding-top: 94px;
 }
 
-.features-list {
+.features__list {
   display: flex;
 }
 
-.features-item {
+.features__item {
   min-width: 270px;
   height: 251px;
 }
 
-.features-item-bg {
+.features__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.features__bg {
   width: 270px;
   height: 120px;
   display: flex;
@@ -273,20 +277,16 @@ img {
   margin-bottom: 30px;
 }
 
-.features-item-icon {
+.features__icon {
   fill: var(--primary-font-color);
 }
 
-.features-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.features-title {
+.features__title {
   margin-bottom: 10px;
   color: var(--primary-font-color);
 }
 
-.features-desc {
+.features__title-desc {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.714;
