--- a/css/styles.css
+++ b/css/styles.css
@@ -445,11 +445,11 @@ img {
   display: flex;
 }
 
-.clients-item:not(:last-child) {
+.clients__list-item:not(:last-child) {
   margin-right: 30px;
 }
 
-.clients-item-link {
+.clients__list-link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -463,18 +463,18 @@ img {
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-item-link:hover,
-.clients-item-link:focus {
+.clients__list-link:hover,
+.clients__list-link:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
 
-.clients-icon {
+.clients__list-icon {
   fill: currentColor;
 }
 
-.clients-icon:hover,
-.clients-icon:focus {
+.clients__list-icon:hover,
+.clients__list-icon:focus {
   fill: currentColor;
 }
 /*==================== END OF CLIENTS ====================*/
