--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,12 @@
 @import "./common";
-@import "./components/page-header";
-@import "./components/logo";
-@import "./components/_nav";
-@import "./components/contacts";
+@import "./utils/visually-hidden";
+@import "./components/page-header/base";
+@import "./components/common/logo";
+@import "./components/page-header/nav";
+@import "./components/page-header/contacts";
+@import "./components/page-hero/hero";
+@import "./components/page-features/features";
+@import "./components/page-about/about";
+@import "./components/page-team/team";
+@import "./components/page-clients/clients";
+@import "./components/page-footer/footer";
