--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,14 @@
 @import "./common";
 @import "./utils/visually-hidden";
-@import "./components/page-header/base";
+@import "./components/common/page-header/base";
 @import "./components/common/logo";
-@import "./components/page-header/nav";
-@import "./components/page-header/contacts";
-@import "./components/page-hero/hero";
-@import "./components/page-features/features";
-@import "./components/page-about/about";
-@import "./components/page-team/team";
-@import "./components/page-clients/clients";
-@import "./components/page-footer/footer";
+@import "./components/common/page-header/nav";
+@import "./components/common/page-header/contacts";
+@import "./components/index.html/page-hero/hero";
+@import "./components/index.html/page-features/features";
+@import "./components/index.html/page-about/about";
+@import "./components/index.html/page-team/team";
+@import "./components/index.html/page-clients/clients";
+@import "./components/common/page-footer/footer";
+@import "./components/portfolio.html/page-filters/filters";
+@import "./components/portfolio.html/page-portfolio/portfolio";
