--- a/sass/components/common/_logo.scss
+++ b/sass/components/common/_logo.scss
@@ -1,4 +1,3 @@
-/* Оформление лого шапка*/
 .nav-logo {
   color: #000000;
   text-decoration: none;
@@ -12,5 +11,22 @@
 }
 
 .nav-logo span {
+  color: var(--accent-color);
+}
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 20px;
+  color: var(--bg-color);
+  text-decoration: none;
+
+  font-family: var(--logo-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+}
+
+.footer-logo span {
   color: var(--accent-color);
 }
