--- a/sass/layout/index/_team.scss
+++ b/sass/layout/index/_team.scss
@@ -64,9 +64,8 @@
 }
 
 .social-list__link {
-  display: flex;
+  @include centeredFlex();
   justify-content: center;
-  align-items: center;
   width: 44px;
   height: 44px;
   background-color: var(--bg-color);
