--- a/sass/components/_close-btn.scss
+++ b/sass/components/_close-btn.scss
@@ -1,7 +1,6 @@
 .close-btn {
-  display: flex;
+  @include centeredFlex();
   justify-content: center;
-  align-items: center;
   position: absolute;
   width: 30px;
   height: 30px;
