--- a/sass/components/common/page-header/_base.scss
+++ b/sass/components/common/page-header/_base.scss
@@ -4,6 +4,5 @@
   border-bottom: 1px solid #ececec;
 }
 .header .container {
-  display: flex;
-  align-items: center;
+  @include centeredFlex();
 }
