--- a/sass/components/common/page-header/_contacts.scss
+++ b/sass/components/common/page-header/_contacts.scss
@@ -1,6 +1,5 @@
 .contacts-list {
-  display: flex;
-  align-items: center;
+  @include centeredFlex();
   margin-left: auto;
 }
 
@@ -9,9 +8,8 @@
 }
 
 .contacts-list__link {
-  display: flex;
+  @include centeredFlex();
   color: var(--secondary-font-color);
-  align-items: center;
   padding: 6px 0;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
