--- a/sass/components/common/page-header/_nav.scss
+++ b/sass/components/common/page-header/_nav.scss
@@ -1,11 +1,9 @@
 .nav {
-  display: flex;
-  align-items: center;
+  @include centeredFlex();
 }
 
 .nav__list {
-  display: flex;
-  align-items: center;
+  @include centeredFlex();
   font-weight: 500;
   font-size: 14px;
   line-height: 1.143;
