--- a/sass/layout/index/_features.scss
+++ b/sass/layout/index/_features.scss
@@ -18,9 +18,8 @@
 .features__bg {
   width: 270px;
   height: 120px;
-  display: flex;
+  @include centeredFlex();
   justify-content: center;
-  align-items: center;
   background: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
