--- a/sass/components/common/page-header/_nav.scss
+++ b/sass/components/common/page-header/_nav.scss
@@ -4,9 +4,7 @@
 
 .nav__list {
   @include centeredFlex();
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.143;
+  @include fontOptions(500, 14px, 16px);
   letter-spacing: 0.02em;
 }
 
