--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -59,9 +59,7 @@ img {
 }
 
 .uppertitle {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.143;
+  @include fontOptions(700, 14px, 16px);
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--bg-color);
@@ -72,9 +70,7 @@ img {
   height: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
+  @include fontOptions(700, 16px, 30px);
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
