--- a/sass/components/common/page-footer/_footer.scss
+++ b/sass/components/common/page-footer/_footer.scss
@@ -16,18 +16,14 @@
   margin-bottom: 9px;
 }
 .address__list-place {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.714;
+  @include fontOptions(400, 14px, 24px);
   letter-spacing: 0.03em;
   color: var(--bg-color);
   font-style: normal;
 }
 
 .adress__list-link {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.714;
+  @include fontOptions(400, 14px, 24px);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
