--- a/sass/layout/index/_clients.scss
+++ b/sass/layout/index/_clients.scss
@@ -1,7 +1,5 @@
 .clients-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.666;
+  @include fontOptions(700, 36px, 60px);
   text-align: center;
   letter-spacing: 0.03em;
 
