--- a/sass/layout/index/_features.scss
+++ b/sass/layout/index/_features.scss
@@ -35,9 +35,7 @@
 }
 
 .features__title-desc {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.714;
+  @include fontOptions(400, 14px, 24px);
   letter-spacing: 0.03em;
   color: var(--secondary-font-color);
 }
