--- a/sass/layout/index/_hero.scss
+++ b/sass/layout/index/_hero.scss
@@ -13,9 +13,7 @@
 }
 
 .hero__title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.364;
+  @include fontOptions(900, 44px, 60px);
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
