--- a/sass/layout/portfolio/_filters.scss
+++ b/sass/layout/portfolio/_filters.scss
@@ -2,9 +2,7 @@
   min-width: 73px;
   padding: 6px 22px;
   border-radius: 4px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.625;
+  @include fontOptions(500, 16px, 26px);
   align-items: center;
   text-align: center;
   letter-spacing: 0.03em;
