--- a/sass/layout/portfolio/_portfolio.scss
+++ b/sass/layout/portfolio/_portfolio.scss
@@ -40,18 +40,14 @@
 }
 
 .portfolio-title-block__title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
+  @include fontOptions(700, 18px, 36px);
   letter-spacing: 0.06em;
   color: var(--primary-font-color);
   margin-bottom: 4px;
 }
 
 .portfolio-title-block__subtitle {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.875;
+  @include fontOptions(400, 16px, 30px);
   letter-spacing: 0.03em;
   color: var(--secondary-font-color);
 }
@@ -79,9 +75,7 @@
 }
 
 .portfolio-drawer__desc {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.555;
+  @include fontOptions(400, 18px, 28px);
   letter-spacing: 0.03em;
   padding: 63px 24px;
 
