Добавлен парсел _social.scss
Отдельно вынесены параметры соц. иконок с линками. Наведен порядок в mai.scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,8 @@
 @import "./components/common/logo";
 @import "./components/common/page-header/nav";
 @import "./components/common/page-header/contacts";
-
+@import "./components/social";
+@import "./components/common/page-footer/footer";
 @import "./components/backdrop";
 @import "./components/modal-btn";
 @import "./components/close-btn";
@@ -25,5 +26,3 @@
 @import "./layout/index/clients";
 @import "./layout/portfolio/filters";
 @import "./layout/portfolio/portfolio";
-
-@import "./components/common/page-footer/footer";
