--- a/css/main.css
+++ b/css/main.css
@@ -543,6 +543,10 @@ img {
 }
 
 .hero {
+  max-width: 1600px;
+  min-height: 600px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--footer-bg-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/bg-hero.jpg");
   background-size: cover;
