--- a/sass/layout/index/_hero.scss
+++ b/sass/layout/index/_hero.scss
@@ -1,4 +1,8 @@
 .hero {
+  max-width: 1600px;
+  min-height: 600px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--footer-bg-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
